overflow-issue-resolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -945,6 +945,7 @@ ul {
     .container2 {
         width: 1774px !important;
         padding: 0;
+        padding-right: 12px;
         margin-left: auto !important;
     }
 
